# os-final-proj

./: .gitignore  CMakeLists.txt  README.md
OSFinal/: main.c
presentation/: OS Final Presentation.pptx
presentation/raw/: OS Final Presentation.pptx
python/workload/: task_schedule0.csv  task_schedule1.csv  task_schedule2.csv  task_schedule3.csv  task_schedule4.csv  workloadGeneration.py
src/: main.c
src/core/: process.c  process.h  queue.c  queue.h
src/metrics/: metrics.c  metrics.h  response_time.c  turnaround_time.c  virtual_runtime_variance.c
src/schedulers/completely-fair-scheduler/: cfs.c  cfs.h
src/schedulers/first-come-first-serve/: fcfs.h
src/schedulers/first_come_first_serve/: fcfs.h
src/schedulers/shortest_remaining_time/: srt.h
src/simulation/: main.c  sim.h
src/utils/: rbtree.c  rbtree.h
workload/: task_schedule.csv  task_schedule0.csv  task_schedule1.csv  task_schedule2.csv  task_schedule3.csv  task_schedule4.csv  workloadGeneration.py
